// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard renders playlists when they exist 1`] = `
<div>
  <div
    className="banner-text"
  >
    <h1
      className="banner-bold"
    >
      Dashboard
    </h1>
  </div>
  <div
    className="content"
  >
    <table>
      <thead>
        <tr>
          <th
            id="playlist-name"
          >
            Name
          </th>
          <th>
            Invite
          </th>
        </tr>
      </thead>
      <tbody>
        <Playlist
          id={1}
          key="1"
          name="playlist 1"
          sendMail={[Function]}
          videos={Array []}
        />
        <Playlist
          id={2}
          key="2"
          name="playlist 2"
          sendMail={[Function]}
          videos={Array []}
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`dashboard matches snapshot  1`] = `
<div>
  <div
    className="banner-text"
  >
    <h1
      className="banner-bold"
    >
      Dashboard
    </h1>
  </div>
  <div
    className="content"
  >
    <table>
      <thead>
        <tr>
          <th
            id="playlist-name"
          >
            Name
          </th>
          <th>
            Invite
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;
